--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML JS Ninja</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -19,19 +20,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <div class="info">
-    <div class="info__title">Coming soon...</div>
+    <div class="info__title">Contacts</div>
     <div class="socials">
         <a href="https://www.linkedin.com/in/vladislav-malienkov-8a3a0383/" target="_blank" rel="nofollow noopener" class="socials__item social social--linkedin">
             <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://www.facebook.com/vlad.malenkov" target="_blank" rel="nofollow noopener" class="socials__item social social--facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/vladmalienkov" target="_blank" rel="nofollow noopener" class="socials__item social social--instagram">
+            <i class="fab fa-instagram"></i>
         </a>
         <a href="https://github.com/vlad00777" target="_blank" rel="nofollow noopener" class="socials__item social social--github">
             <i class="fab fa-github"></i>
         </a>
         <a href="https://gitlab.com/vlad00777" target="_blank" rel="nofollow noopener" class="socials__item social social--gitlab">
             <i class="fab fa-gitlab"></i>
-        </a>
-        <a href="https://www.facebook.com/vlad.malenkov" target="_blank" rel="nofollow noopener" class="socials__item social social--facebook">
-            <i class="fab fa-facebook-f"></i>
         </a>
     </div>
 </div>
